Criado o body com os projetos. FIX ME: Ao adicionar mais um projeto, aconytece overflow x

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,22 @@
   text-align: center;
 }
 
+h1 {
+  cursor: default;
+}
+
+h2 {
+  cursor: default;
+}
+
+h3 {
+  cursor: default;
+}
+
+p {
+  cursor: default;
+}
+
 .App-header {
   background-color: #282c34;
   width: 100vw;
@@ -9,7 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: calc(5px + 2vmin);
+  font-size: 3vmin;
   color: white;
 }
 
@@ -20,6 +36,7 @@
   justify-content: center;
   gap: 1vw;
   margin-right: 2vw;
+  font-size: 3vmin;
 }
 
 .profileArea > a {
@@ -32,6 +49,79 @@
 }
 
 #pfp {
-  height: 8vh;
+  height: 8vmin;
   border-radius: 100%;
+}
+
+.body{
+  background-color: #444850;
+  min-height: 90vh;
+  height: 100%;
+  width: 100vw;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-size: calc(8px + 2vmin);
+}
+
+.body > h2 {
+  color: white;
+  margin-top: 0;
+  padding: 2vw;
+  margin: 0;
+}
+
+.projetos {
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  /* gap: 1vmax; */
+}
+
+.projeto{
+  font-size: 30px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1vh;
+  max-width: 300px;
+}
+
+.projetoLogo{
+  background-color: #8691a9;
+  width: 300px;
+  max-width: 300px;
+  height: 200px;
+  border-radius: 30px;
+  margin: 0;
+  padding: 0;
+}
+
+.projetoLogo > img{
+  height: 200px;
+  max-width: 300px;
+}
+
+.projeto > h3 {
+  margin: 0;
+  color: white;
+}
+
+.links {
+  margin-top: -1.5vh;
+  color: white;
+}
+
+.links > p {
+  margin: 0;
+}
+
+.links > p > a {
+  text-decoration: underline;
+  color: white;
 }
